--- a/app/views/admin/events/new.html.erb
+++ b/app/views/admin/events/new.html.erb
@@ -55,10 +55,10 @@
           </form>
         </div>
         <div class="col-lg-6">
-          <h5><b>Range validation</b></h5>
-          <p class="text-muted font-13 m-b-30">
+          <h5><b>Cover Image</b></h5>
+          <!-- <p class="text-muted font-13 m-b-30">
             Your awesome text goes here.
-          </p>
+          </p> -->
           <div class="row">
             <div class="col-md-12 portlets">
               <div class="m-b-30">
@@ -72,16 +72,13 @@
           </div>
           <div class="card-box">
             <h4 class="m-t-0 m-b-20 header-title"><b>Location</b></h4>
-            <div class="form-group text-right">
-              <a class="btn btn-primary waves-effect waves-light" id="search-geolocation">Get location</a>
-            </div>
-
             <div class="row form-group">
               <div class="col-sm-6">
                 <input type="search" class="form-control" id="location-address">
               </div>
               <div class="col-sm-6">
                 <a class="btn btn-primary waves-effect waves-light" id="search-map">Search</a>
+                <a class="btn btn-primary waves-effect waves-light" id="search-geolocation">Get location</a>
               </div>
             </div>
 
