--- a/app/views/admin/events/new.html.erb
+++ b/app/views/admin/events/new.html.erb
@@ -99,7 +99,9 @@
 <%= javascript_include_tag 'bootstrap-touchspin/dist/jquery.bootstrap-touchspin.min', 'data-turbolinks-track' => true %>
 <%= javascript_include_tag 'bootstrap-inputmask/bootstrap-inputmask.min', 'data-turbolinks-track' => true %>
 
-<%= javascript_include_tag 'moment/moment', 'data-turbolinks-track' => true %>
+<%#= javascript_include_tag 'moment/moment', 'data-turbolinks-track' => true %>
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.14.1/moment.min.js"></script>
+
 <%= javascript_include_tag 'timepicker/bootstrap-timepicker.min', 'data-turbolinks-track' => true %>
 <%= javascript_include_tag 'mjolnic-bootstrap-colorpicker/dist/js/bootstrap-colorpicker.min', 'data-turbolinks-track' => true %>
 <%= javascript_include_tag 'bootstrap-datepicker/dist/js/bootstrap-datepicker.min', 'data-turbolinks-track' => true %>
@@ -114,7 +116,8 @@
 </script>
 
 <!-- Parsleyjs -->
-<%= javascript_include_tag 'parsleyjs/dist/parsley.min', 'data-turbolinks-track' => true %>
+<%#= javascript_include_tag 'parsleyjs/dist/parsley.min', 'data-turbolinks-track' => true %>
+<script type="text/javascript" src="//cdn.bootcss.com/parsley.js/2.4.3/parsley.min.js"></script>
 <script type="text/javascript">
   $(document).ready(function() {
     $('form').parsley();
