--- a/app/views/admin/events/new.html.erb
+++ b/app/views/admin/events/new.html.erb
@@ -2,63 +2,84 @@
   <div class="col-sm-12">
     <div class="card-box">
       <h4 class="m-t-0 m-b-30 header-title"><b>Fields validation</b></h4>
+
+      <div class="row">
+        <div class="col-lg-12 text-right">
+          <button id="submitForm" type="submit" class="btn btn-primary waves-effect waves-light">
+            Add
+          </button>
+          <button id="resetForm" type="reset" class="btn btn-default waves-effect waves-light m-l-5">
+            Cancel
+          </button>
+        </div>
+      </div>
+
       <div class="row">
         <div class="col-lg-6">
           <h5><b>Validation type</b></h5>
           <p class="text-muted font-13 m-b-30">
             Your awesome text goes here.
           </p>
-          <form class="form-horizontal group-border-dashed" action="#">
+
+          <%= form_for @event, url: admin_events_path, medthod: :post, html: { class: 'form-horizontal group-border-dashed' } do |f| %>
             <div class="form-group">
-              <label class="col-sm-3 control-label">Title</label>
+              <%= f.label :organizer, class: 'col-sm-3 control-label' %>
               <div class="col-sm-6">
-                <input type="text" class="form-control" required placeholder="Type something" />
+                <%= f.select :user, options_for_select(@users.collect{ |u| ["#{u.first_name} #{u.last_name}", u.id] }), {}, { class: 'form-control select2' } %>
+              </div>
+            </div>
+            <div class="form-group">
+              <%= f.label :title, class: 'col-sm-3 control-label' %>
+              <div class="col-sm-6">
+                <%= f.text_field :title, class: 'form-control', autofocus: true, required: true, placeholder: 'Type something'  %>
               </div>
             </div>
 
             <div class="form-group">
-              <label class="col-sm-3 control-label">Description</label>
+              <%= f.label :description, class: 'col-sm-3 control-label' %>
               <div class="col-sm-6">
-                <textarea required class="form-control"></textarea>
+                <%= f.text_area :description, class: 'form-control', rows: 3, required: true %>
               </div>
             </div>
 
             <div class="form-group">
-              <label class="col-sm-3 control-label">Price</label>
+              <%= f.label :price, class: 'col-sm-3 control-label' %>
               <div class="col-sm-6">
                 <div class="input-group">
-                  <input data-parsley-type="number" type="text" class="form-control" required placeholder="Enter only numbers" />
+                  <%= f.text_field :price, class: 'form-control', rows: 3, required: true, placeholder: "Enter only numbers", "data-parsley-type": "number"%>
                   <span class="input-group-addon">.00</span>
                 </div>
               </div>
             </div>
 
             <div class="form-group">
-              <label class="col-sm-3 control-label">From to</label>
+              <%= f.label :from_to, class: 'col-sm-3 control-label' %>
               <div class="col-sm-6">
                 <div class="input-group">
-                  <input type="text" class="form-control" placeholder="dd/mm/yyyy" id="datepicker-autoclose" required date-format="dd/mm/yyyy">
+                  <%= f.text_field :from_to, class: 'form-control', autofocus: true, required: true, placeholder: "dd/mm/yyyy", id: "datepicker-autoclose", "date-format": "dd/mm/yyyy" %>
                   <span class="input-group-addon bg-primary b-0 text-white"><i class="ion-calendar"></i></span>
                 </div>
               </div>
             </div>
+
             <div class="form-group">
-              <div class="col-sm-offset-3 col-sm-6">
-                <button type="submit" class="btn btn-primary waves-effect waves-light">
-                  add
-                </button>
-                <button type="reset" class="btn btn-default waves-effect waves-light m-l-5">
-                  Cancel
-                </button>
+              <%= f.label :location, class: 'col-sm-3 control-label' %>
+              <div class="col-sm-6">
+                <%= f.text_field :location, class: 'form-control', autofocus: true, required: true, placeholder: 'Type something'  %>
               </div>
             </div>
-          </form>
+
+            <div class="form-group">
+              <%= f.label :category, class: 'col-sm-3 control-label' %>
+              <div class="col-sm-6">
+                <%= f.select :category, options_for_select(@categories.collect{ |c| [c.name, c.id] }), {}, { class: 'form-control select2' } %>
+              </div>
+            </div>
         </div>
+        <% end %>
+
         <div class="col-lg-6">
           <h5><b>Cover Image</b></h5>
-          <!-- <p class="text-muted font-13 m-b-30">
-            Your awesome text goes here.
-          </p> -->
           <div class="row">
             <div class="col-md-12 portlets">
               <div class="m-b-30">
@@ -121,6 +142,10 @@
 <script type="text/javascript">
   $(document).ready(function() {
     $('form').parsley();
+
+    $('#submitForm').on('click', function(){
+      $('#new_event').submit();
+    });
   });
 </script>
 <!-- google maps api -->
