fix edit price from event git push

--- a/app/views/admin/events/edit.html.erb
+++ b/app/views/admin/events/edit.html.erb
@@ -46,7 +46,7 @@
               <%= f.label :price, class: 'col-sm-3 control-label' %>
               <div class="col-sm-6">
                 <div class="input-group">
-                  <%= f.text_field :description, class: 'form-control', rows: 3, required: true, placeholder: "Enter only numbers", "data-parsley-type": "number"%>
+                  <%= f.text_field :price, class: 'form-control', rows: 3, required: true, placeholder: "Enter only numbers", "data-parsley-type": "number"%>
                   <span class="input-group-addon">.00</span>
                 </div>
               </div>
