--- a/app/views/admin/events/index.html.erb
+++ b/app/views/admin/events/index.html.erb
@@ -30,7 +30,7 @@
                 <td><%= event.from_to %></td>
                 <td><%= event.location %></td>
                 <td><%= event.price %></td>
-                <td><%= link_to "Edit", edit_admin_event_path(event.id) %></td>
+                <td><%= link_to "Edit", edit_admin_event_path(event.id), target: '_self' %></td>
               </tr>
             <% end %>
           </tbody>
