--- a/app/views/admin/events/edit.html.erb
+++ b/app/views/admin/events/edit.html.erb
@@ -21,7 +21,7 @@
             Your awesome text goes here.
           </p>
 
-          <%= form_for @event, url: admin_events_path, medthod: :post, html: { class: 'form-horizontal group-border-dashed' } do |f| %>
+          <%= form_for @event, url: admin_event_path(@event), medthod: :post, html: { class: 'form-horizontal group-border-dashed' } do |f| %>
             <div class="form-group">
               <%= f.label :organizer, class: 'col-sm-3 control-label' %>
               <div class="col-sm-6">
@@ -46,7 +46,7 @@
               <%= f.label :price, class: 'col-sm-3 control-label' %>
               <div class="col-sm-6">
                 <div class="input-group">
-                  <%= f.text_field :description, class: 'form-control', rows: 3, required: true, placeholder: "Enter only numbers", "data-parsley-type": "number"%>
+                  <%= f.text_field :price, class: 'form-control', rows: 3, required: true, placeholder: "Enter only numbers", "data-parsley-type": "number"%>
                   <span class="input-group-addon">.00</span>
                 </div>
               </div>
