--- a/app/views/admin/events/new.html.erb
+++ b/app/views/admin/events/new.html.erb
@@ -2,7 +2,6 @@
   <div class="col-sm-12">
     <div class="card-box">
       <h4 class="m-t-0 m-b-30 header-title"><b>Fields validation</b></h4>
-
       <div class="row">
         <div class="col-lg-12 text-right">
           <button id="submitForm" type="submit" class="btn btn-primary waves-effect waves-light">
@@ -15,12 +14,11 @@
       </div>
 
       <div class="row">
-        <div class="col-lg-6">
+        <div class="col-lg-12">
           <h5><b>Validation type</b></h5>
           <p class="text-muted font-13 m-b-30">
             Your awesome text goes here.
           </p>
-
           <%= form_for @event, url: admin_events_path, medthod: :post, html: { class: 'form-horizontal group-border-dashed' } do |f| %>
             <div class="form-group">
               <%= f.label :organizer, class: 'col-sm-3 control-label' %>
@@ -75,36 +73,32 @@
                 <%= f.select :category, options_for_select(@categories.collect{ |c| [c.name, c.id] }), {}, { class: 'form-control select2' } %>
               </div>
             </div>
-        </div>
-        <% end %>
 
-        <div class="col-lg-6">
-          <h5><b>Cover Image</b></h5>
-          <div class="row">
-            <div class="col-md-12 portlets">
-              <div class="m-b-30">
-                <form action="#" class="dropzone" id="dropzone">
-                  <div class="fallback">
-                    <input name="file" type="file" multiple />
-                  </div>
-                </form>
-              </div>
-            </div>
-          </div>
-          <div class="card-box">
-            <h4 class="m-t-0 m-b-20 header-title"><b>Location</b></h4>
-            <div class="row form-group">
+            <div class="form-group">
+              <%= f.label :corver, class: 'col-sm-3 control-label' %>
               <div class="col-sm-6">
-                <input type="search" class="form-control" id="location-address">
-              </div>
-              <div class="col-sm-6">
-                <a class="btn btn-primary waves-effect waves-light" id="search-map">Search</a>
-                <a class="btn btn-primary waves-effect waves-light" id="search-geolocation">Get location</a>
+                <div class="form-control">
+                  <%= f.file_field :cover %>
+                </div>
+                <%#= f.file_field :corver, class: 'form-control' %>
               </div>
             </div>
 
-            <div id="gmaps-overlay" class="gmaps"></div>
-          </div>
+            <div class="card-box">
+              <h4 class="m-t-0 m-b-20 header-title"><b>Location</b></h4>
+              <div class="row form-group">
+                <div class="col-sm-6">
+                  <input type="search" class="form-control" id="location-address">
+                </div>
+                <div class="col-sm-6">
+                  <a class="btn btn-primary waves-effect waves-light" id="search-map">Search</a>
+                  <a class="btn btn-primary waves-effect waves-light" id="search-geolocation">Get location</a>
+                </div>
+              </div>
+              <div id="gmaps-overlay" class="gmaps"></div>
+            </div>
+
+          <% end %>
         </div>
       </div>
     </div>
@@ -149,7 +143,7 @@
   });
 </script>
 <!-- google maps api -->
-<%= javascript_include_tag 'http://maps.google.com/maps/api/js?sensor=true', 'data-turbolinks-track' => true %>
+<%= javascript_include_tag '//maps.google.com/maps/api/js?sensor=true', 'data-turbolinks-track' => true %>
 <!-- Gmaps file -->
 <%= javascript_include_tag 'gmaps/gmaps.min', 'data-turbolinks-track' => true %>
 <script type="text/javascript">
