--- a/app/views/admin/events/edit.html.erb
+++ b/app/views/admin/events/edit.html.erb
@@ -3,6 +3,7 @@
     <div class="card-box">
       <h4 class="m-t-0 m-b-30 header-title"><b>Fields validation</b></h4>
 
+
       <div class="row">
         <div class="col-lg-12 text-right">
           <button id="submitForm" type="submit" class="btn btn-primary waves-effect waves-light">
@@ -75,35 +76,56 @@
                 <%= f.select :category, options_for_select(@categories.collect{ |c| [c.name, c.id] }), {}, { class: 'form-control select2' } %>
               </div>
             </div>
+
+            <div class="card-box">
+              <h4 class="m-t-0 m-b-20 header-title"><b>Location</b></h4>
+              <div class="row form-group">
+                <div class="col-sm-6">
+                  <input type="search" class="form-control" id="location-address">
+                </div>
+                <div class="col-sm-6">
+                  <a class="btn btn-primary waves-effect waves-light" id="search-map">Search</a>
+                  <a class="btn btn-primary waves-effect waves-light" id="search-geolocation">Get location</a>
+                </div>
+              </div>
+              <div id="gmaps-overlay" class="gmaps"></div>
+            </div>
+          <% end %>
         </div>
-        <% end %>
 
         <div class="col-lg-6">
           <h5><b>Cover Image</b></h5>
           <div class="row">
             <div class="col-md-12 portlets">
               <div class="m-b-30">
-                <form action="#" class="dropzone" id="dropzone">
+                <%= form_for @event, url: admin_event_upload_path(@event), multipart: true, html: { class: 'dropzone', id: 'dropzone' } do |f| %>
+                  <%#= f.file_field 'picture' %>
+                  <div class="fallback">
+                    <!-- <input name="picture" type="file" multiple /> -->
+                    <%= file_field_tag "images[]", type: :file, multiple: true %>
+                  </div>
+                <% end %>
+                 
+                <!-- <form action="#" class="dropzone" id="dropzone">
                   <div class="fallback">
                     <input name="file" type="file" multiple />
                   </div>
-                </form>
+                </form> -->
               </div>
             </div>
           </div>
-          <div class="card-box">
-            <h4 class="m-t-0 m-b-20 header-title"><b>Location</b></h4>
-            <div class="row form-group">
-              <div class="col-sm-6">
-                <input type="search" class="form-control" id="location-address">
-              </div>
-              <div class="col-sm-6">
-                <a class="btn btn-primary waves-effect waves-light" id="search-map">Search</a>
-                <a class="btn btn-primary waves-effect waves-light" id="search-geolocation">Get location</a>
-              </div>
-            </div>
 
-            <div id="gmaps-overlay" class="gmaps"></div>
+          <div class="row">
+            <div class="col-md-12">
+              <%= image_tag @event.cover(:medium) %>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12">
+              <% @event.event_attachments.each do |e|%>
+                <%= image_tag e.media(:medium) %>
+              <% end %>
+            </div>
           </div>
         </div>
       </div>
@@ -149,7 +171,7 @@
   });
 </script>
 <!-- google maps api -->
-<%= javascript_include_tag 'http://maps.google.com/maps/api/js?sensor=true', 'data-turbolinks-track' => true %>
+<%= javascript_include_tag '//maps.google.com/maps/api/js?sensor=true', 'data-turbolinks-track' => true %>
 <!-- Gmaps file -->
 <%= javascript_include_tag 'gmaps/gmaps.min', 'data-turbolinks-track' => true %>
 <script type="text/javascript">
