--- a/app/views/greetings/hello.html.erb
+++ b/app/views/greetings/hello.html.erb
@@ -58,9 +58,9 @@
                   <a href="https://www.instagram.com/daydashapp/" target="_blank"><img src="landing/img/icon-ig.png" width="30"></a>
                 </div>
                 <% if user_signed_in? %>
-                  <%= link_to('Logout', destroy_user_session_path, method: :delete) %>
+                  <%#= link_to('Logout', destroy_user_session_path, method: :delete) %>
                 <% else %>
-                  <%= link_to('Login', new_user_session_path)  %>
+                  <%#= link_to('Login', new_user_session_path)  %>
                 <% end %>
               </div>
               <!-- end footer: blog & social -->
