--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,57 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="robots" content="noindex, nofollow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Discover amazing hand-selected event and activity in Bangkok - Daydash</title>
-    <meta name="keywords" content="event bangkok, อีเว้น กรุงเทพ, งานอีเว้นท์, กิจกรรม, กิจกรรม กรุงเทพ">
-    <meta name="description" content="เพราะชีวิตคนเรานั้นมีเวลาจำกัด เราจึงรวบรวมกิจกรรมสนุกๆ อีเว้นท์ดีๆ เพื่อให้คุณ ใช้ชีวิตได้เต็มที่ทุกวัน">
-    <meta property="og:url"                content="http://daydash.co" />
-    <meta property="og:type"               content="website" />
-    <meta property="og:title"              content="Daydash.co - ค้นพบกิจกรรมและอีเว้นท์ดีๆ รอบตัวคุณได้ทุกวัน" />
-    <meta property="og:description"        content="เพราะชีวิตคนเรานั้นมีเวลาจำกัด เราจึงรวบรวมกิจกรรมสนุกๆ อีเว้นท์ดีๆ เพื่อให้คุณใช้ชีวิตได้เต็มที่ทุกวัน" />
-    <meta property="og:image"              content="http://daydash.co/uploads/daydash-fb-ogimage.jpg" />
-    <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
+    <title>Brick</title>
     <%= csrf_meta_tags %>
 
-    <!-- Google Font -->
-    <link href='https://fonts.googleapis.com/css?family=Kanit:200,400&subset=thai,latin' rel='stylesheet' type='text/css'>
-    <!-- Bootstrap core CSS -->
-    <link href="landing/package/bootstrap.min.css" rel="stylesheet">
-    <!-- slick -->
-    <link rel="stylesheet" href="landing/package/slick/slick.css">
-    <link rel="stylesheet" href="landing/package/slick/slick-theme.css">
-    <!-- Custom styles for this template -->
-    <link href="landing/style.css" rel="stylesheet">
-    <!-- Google Analytics -->
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-75805130-1', 'auto');
-      ga('send', 'pageview');
-
-    </script>
-    <meta name="google-site-verification" content="fW7grsYgfafziQpVlpl--BnDM29RQ75pH7UqiRDUfM4" />
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-    <%#= stylesheet_link_tag    'greetings/template', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   </head>
   <body>
-    <!-- fb sdk -->
-    <div id="fb-root"></div>
-    <script>(function(d, s, id) {
-      var js, fjs = d.getElementsByTagName(s)[0];
-      if (d.getElementById(id)) return;
-      js = d.createElement(s); js.id = id;
-      js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.6&appId=118382144932801";
-      fjs.parentNode.insertBefore(js, fjs);
-      }(document, 'script', 'facebook-jssdk'));
-    </script>
-    <!-- end fb sdk -->
-    <!-- <div class="wrapper"> -->
-    <%= yield %>
+    It work
+    <%#= yield %>
   </body>
 </html>
