--- a/app/views/admin/events/edit.html.erb
+++ b/app/views/admin/events/edit.html.erb
@@ -22,7 +22,7 @@
             Your awesome text goes here.
           </p>
 
-          <%= form_for @event, url: admin_event_path(@event), medthod: :post, html: { class: 'form-horizontal group-border-dashed' } do |f| %>
+          <%= form_for @event, url: admin_event_path(@event), medthod: :post, html: { class: 'form-horizontal group-border-dashed', id: 'edit_event' } do |f| %>
             <div class="form-group">
               <%= f.label :organizer, class: 'col-sm-3 control-label' %>
               <div class="col-sm-6">
@@ -117,13 +117,18 @@
 
           <div class="row">
             <div class="col-md-12">
-              <%= image_tag @event.cover(:medium) %>
+              thumb2x<%= image_tag @event.cover(:thumb2x) %> <br>
+              thumb3x<%= image_tag @event.cover(:thumb3x) %> <br>
+              normal2x<%= image_tag @event.cover(:normal2x) %> <br>
+              normal3x<%= image_tag @event.cover(:normal3x) %> <br>
+              thumb<%= image_tag @event.cover(:thumb) %> <br>
+              full<%= image_tag @event.cover(:full) %>
             </div>
           </div>
           <div class="row">
             <div class="col-md-12">
               <% @event.event_attachments.each do |e|%>
-                <%= image_tag e.media(:medium) %>
+                <%#= image_tag e.media(:medium) %>
               <% end %>
             </div>
           </div>
@@ -166,7 +171,7 @@
     $('form').parsley();
 
     $('#submitForm').on('click', function(){
-      $('#new_event').submit();
+      $('#edit_event').submit();
     });
   });
 </script>
