--- a/app/views/admin/events/index.html.erb
+++ b/app/views/admin/events/index.html.erb
@@ -15,24 +15,22 @@
               <th></th>
               <th>Title</th>
               <th>Category</th>
-              <td>Organizer</td>
+              <th>Organizer</th>
               <th>From to</th>
               <th>Location</th>
               <th>Price</th>
-              <th></th>
             </tr>
           </thead>
           <tbody>
             <% @events.each do |event| %>
               <tr>
-                <td><%= image_tag event.cover(:thumb) %></td>
-                <td><%= event.title %></td>
+                <td><%= link_to (image_tag event.cover(:thumb), width: '100'), edit_admin_event_path(event.id), target: '_self' %></td>
+                <td><%= link_to event.title, edit_admin_event_path(event.id), target: '_self' %></td>
                 <td><%= event.category.try(:name) %></td>
                 <td><%= "#{event.user.try(:first_name)} #{event.user.try(:last_name)}" %></td>
                 <td><%= event.from_to %></td>
                 <td><%= event.location %></td>
                 <td><%= event.price %></td>
-                <td><%= link_to "Edit", edit_admin_event_path(event.id), target: '_self' %></td>
               </tr>
             <% end %>
           </tbody>
