--- a/app/views/admin/events/new.html.erb
+++ b/app/views/admin/events/new.html.erb
@@ -3,17 +3,6 @@
     <div class="card-box">
       <h4 class="m-t-0 m-b-30 header-title"><b>Fields validation</b></h4>
       <div class="row">
-        <div class="col-lg-12 text-right">
-          <button id="submitForm" type="submit" class="btn btn-primary waves-effect waves-light">
-            Add
-          </button>
-          <button id="resetForm" type="reset" class="btn btn-default waves-effect waves-light m-l-5">
-            Cancel
-          </button>
-        </div>
-      </div>
-
-      <div class="row">
         <div class="col-lg-12">
           <h5><b>Validation type</b></h5>
           <p class="text-muted font-13 m-b-30">
@@ -26,6 +15,14 @@
                 <%= f.select :user, options_for_select(@users.collect{ |u| ["#{u.first_name} #{u.last_name}", u.id] }), {}, { class: 'form-control select2' } %>
               </div>
             </div>
+
+            <div class="form-group">
+              <%= f.label :category, class: 'col-sm-3 control-label' %>
+              <div class="col-sm-6">
+                <%= f.select :category, options_for_select(@categories.collect{ |c| [c.name, c.id] }), {}, { class: 'form-control select2' } %>
+              </div>
+            </div>
+
             <div class="form-group">
               <%= f.label :title, class: 'col-sm-3 control-label' %>
               <div class="col-sm-6">
@@ -41,21 +38,19 @@
             </div>
 
             <div class="form-group">
-              <%= f.label :price, class: 'col-sm-3 control-label' %>
+              <%= f.label :corver_photo, class: 'col-sm-3 control-label' %>
               <div class="col-sm-6">
-                <div class="input-group">
-                  <%= f.text_field :price, class: 'form-control', rows: 3, required: true, placeholder: "Enter only numbers", "data-parsley-type": "number"%>
-                  <span class="input-group-addon">.00</span>
+                <div class="form-control">
+                  <%= f.file_field :cover, type: :file, required: true %>
                 </div>
               </div>
             </div>
 
             <div class="form-group">
-              <%= f.label :from_to, class: 'col-sm-3 control-label' %>
+              <%= f.label :attachments, class: 'col-sm-3 control-label' %>
               <div class="col-sm-6">
-                <div class="input-group">
-                  <%= f.text_field :from_to, class: 'form-control', autofocus: true, required: true, placeholder: "dd/mm/yyyy", id: "datepicker-autoclose", "date-format": "dd/mm/yyyy" %>
-                  <span class="input-group-addon bg-primary b-0 text-white"><i class="ion-calendar"></i></span>
+                <div class="form-control">
+                  <%= f.file_field :attachments, type: :file, required: true, multiple: true %>
                 </div>
               </div>
             </div>
@@ -63,42 +58,62 @@
             <div class="form-group">
               <%= f.label :location, class: 'col-sm-3 control-label' %>
               <div class="col-sm-6">
-                <%= f.text_field :location, class: 'form-control', autofocus: true, required: true, placeholder: 'Type something'  %>
+                <%= f.text_field :location, class: 'form-control', autofocus: true, required: true, placeholder: 'ชื่อสถานที่, ถนน, ซอย'  %>
               </div>
             </div>
 
-            <div class="form-group">
-              <%= f.label :category, class: 'col-sm-3 control-label' %>
-              <div class="col-sm-6">
-                <%= f.select :category, options_for_select(@categories.collect{ |c| [c.name, c.id] }), {}, { class: 'form-control select2' } %>
-              </div>
-            </div>
-
-            <div class="form-group">
-              <%= f.label :corver, class: 'col-sm-3 control-label' %>
-              <div class="col-sm-6">
-                <div class="form-control">
-                  <%= f.file_field :cover %>
-                </div>
-                <%#= f.file_field :corver, class: 'form-control' %>
-              </div>
-            </div>
-
-            <div class="card-box">
-              <h4 class="m-t-0 m-b-20 header-title"><b>Location</b></h4>
-              <div class="row form-group">
-                <div class="col-sm-6">
-                  <input type="search" class="form-control" id="location-address">
-                </div>
-                <div class="col-sm-6">
-                  <a class="btn btn-primary waves-effect waves-light" id="search-map">Search</a>
-                  <a class="btn btn-primary waves-effect waves-light" id="search-geolocation">Get location</a>
+            <div class="row">
+              <div class="col-sm-offset-2 col-sm-7">
+                <div class="card-box">
+                  <h4 class="m-t-0 m-b-20 header-title"><b>Map</b></h4>
+                  <div id="gmaps-overlay" class="gmaps"></div>
+                  <%= f.hidden_field :latitude %>
+                  <%= f.hidden_field :longitude %>
                 </div>
               </div>
-              <div id="gmaps-overlay" class="gmaps"></div>
             </div>
 
+            <div class="row">
+              <div class="col-sm-offset-2 col-sm-6">
+                <a id="add-more-field" href="javascript:;" target="_self">Add more</a>
+              </div>
+            </div>
+
+            <div class="form-group section">
+              <div class="section-wrap clearfix">
+                <%= f.label :ticket, class: 'col-sm-2 control-label' %>
+                <div class="col-sm-2 ticket-name">
+                  <%= f.text_field :ticket_name, multiple: true, class: 'form-control', placeholder: 'Ticket name', autofocus: true, required: true %>
+                </div>
+                <div class="col-sm-2 ticket-price">
+                  <%= f.text_field :ticket_price, multiple: true, class: 'form-control', placeholder: 'Ticket price', autofocus: true, required: true, "data-parsley-type": "number", "data-parsley-maxlength": "7" %>
+                </div>
+                <div class="col-sm-2 ticket-date">
+                  <%= f.text_field :ticket_date, multiple: true, class: 'form-control event-datepicker', autofocus: true, required: true, placeholder: "dd/mm/yyyy", "date-format": "dd/mm/yyyy" %>
+                </div>
+                <div class="col-sm-1 ticket-time">
+                  <div class="input-group">
+                    <div class="bootstrap-timepicker">
+                      <%= f.text_field :ticket_time, multiple: true, class: 'form-control event-timepicker', autofocus: true, required: true, placeholder: "9:00" %>
+                    </div>
+                  </div>
+                </div>
+                <br>
+                <br>
+              </div>
+            </div>
           <% end %>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-12 text-right">
+          <button id="submitForm" type="submit" class="btn btn-primary waves-effect waves-light">
+            Sumit
+          </button>
+          <button id="resetForm" type="reset" class="btn btn-default waves-effect waves-light m-l-5">
+            Cancel
+          </button>
         </div>
       </div>
     </div>
@@ -123,11 +138,50 @@
 <%= javascript_include_tag 'bootstrap-daterangepicker/daterangepicker', 'data-turbolinks-track' => true %>
 
 <script>
-  jQuery('#datepicker-autoclose').datepicker({
-    autoclose: true,
-    format: "dd/mm/yyyy",
-    todayHighlight: true
+
+  jQuery(document).ready(function() {
+
+    var max_fields      = 10; //maximum input boxes allowed
+    var wrapper         = $(".section-wrap"); //Fields wrapper
+    var add_button      = $("#add-more-field"); //Add button ID
+    var ticketName      = $(".ticket-name");
+    var ticketPrice     = $(".ticket-price");
+    var ticketDate      = $(".ticket-date");
+    var ticketTime      = $(".ticket-time");
+
+    var x = 1; //initlal text box count
+    $(add_button).click(function(e){ //on add input button click
+      e.preventDefault();
+      if(x < max_fields){ //max input box allowed
+        x++; //text box increment
+        // $(wrapper).append('<div><input type="text" name="mytext[]"/><a href="#" class="remove_field">Remove</a></div>'); //add input box
+
+        $(wrapper).clone().appendTo($('.section'));
+
+        picker_init();
+      }
+    });
+
+    $(wrapper).on("click",".remove_field", function(e){ //user click on remove text
+      e.preventDefault(); $(this).parent('div').remove(); x--;
+    })
+
+    picker_init();
   });
+
+  function picker_init(){
+    jQuery('.event-datepicker').datepicker({
+      autoclose: true,
+      format: "dd/mm/yyyy",
+      todayHighlight: true
+    });
+
+    jQuery('.event-timepicker').timepicker({
+      showMeridian : false,
+      minuteStep : 15
+    });
+  }
+
 </script>
 
 <!-- Parsleyjs -->
@@ -142,91 +196,13 @@
     });
   });
 </script>
-<!-- google maps api -->
-<%= javascript_include_tag '//maps.google.com/maps/api/js?sensor=true', 'data-turbolinks-track' => true %>
-<!-- Gmaps file -->
-<%= javascript_include_tag 'gmaps/gmaps.min', 'data-turbolinks-track' => true %>
-<script type="text/javascript">
 
-!function($) {
-  "use strict";
-
-  var GoogleMap = function() {};
-
-  //creates map with overlay
-  GoogleMap.prototype.createWithOverlay = function ($container) {
-    var map = new GMaps({
-      div: $container,
-      zoom: 16,
-      lat: 13.7563309,
-      lng: 100.50176510000006,
-      click: function(e) {
-        map.removeMarkers()
-        map.addMarker({
-          lat: map.getCenter().lat(),
-          lng: map.getCenter().lng(),
-          draggable: true
-        });
-      },
-    });
-
-    $('#search-geolocation').on('click', function(){
-      GMaps.geolocate({
-        success: function(position) {
-          map.setCenter(position.coords.latitude, position.coords.longitude);
-        },
-        error: function(error) {
-          alert('Geolocation failed: '+error.message);
-        },
-        not_supported: function() {
-          alert("Your browser does not support geolocation");
-        },
-        always: function() {
-          // alert("Done!");
-        }
-      });
-    });
-
-    $('#search-map').on('click', function(){
-      GMaps.geocode({
-        address: $('#location-address').val().trim(),
-        callback: function(results, status){
-          if(status=='OK'){
-            var latlng = results[0].geometry.location;
-            map.setCenter(latlng.lat(), latlng.lng());
-            map.removeMarkers()
-            map.addMarker({
-              lat: map.getCenter().lat(),
-              lng: map.getCenter().lng(),
-              draggable: true
-            });
-          }
-        }
-      });
-    });
-
-    return map;
-  },
-
-  //init
-  GoogleMap.prototype.init = function() {
-    var $this = this;
-    $(document).ready(function(){
-      //with sample markers
-      $this.createWithOverlay('#gmaps-overlay');
-    });
-  },
-
-  //init
-  $.GoogleMap = new GoogleMap, $.GoogleMap.Constructor = GoogleMap
-}(window.jQuery),
-
-//initializing
-function($) {
-  "use strict";
-  $.GoogleMap.init()
-}(window.jQuery);
-
-</script>
 <!-- Dropzone js -->
-<%= javascript_include_tag 'dropzone/dist/dropzone', 'data-turbolinks-track' => true %>
+<%#= javascript_include_tag 'dropzone/dist/dropzone', 'data-turbolinks-track' => true %>
+<!--
+<script type="text/javascript">
+  var uploader = new Dropzone('#event_attachments');
+  uploader.on('success', function( file, resp ){
+    console.log(file)
+  });
+</script> -->
