--- a/app/views/admin/events/edit.html.erb
+++ b/app/views/admin/events/edit.html.erb
@@ -98,14 +98,7 @@
           <div class="row">
             <div class="col-md-12 portlets">
               <div class="m-b-30">
-                <%= form_for @event, url: admin_event_upload_path(@event), multipart: true, html: { class: 'dropzone', id: 'dropzone' } do |f| %>
-                  <%#= f.file_field 'picture' %>
-                  <div class="fallback">
-                    <!-- <input name="picture" type="file" multiple /> -->
-                    <%= file_field_tag "images[]", type: :file, multiple: true %>
-                  </div>
-                <% end %>
-                 
+
                 <!-- <form action="#" class="dropzone" id="dropzone">
                   <div class="fallback">
                     <input name="file" type="file" multiple />
@@ -127,7 +120,7 @@
           </div>
           <div class="row">
             <div class="col-md-12">
-              <% @event.event_attachments.each do |e|%>
+              <% @event.galleries.each do |e|%>
                 <%= image_tag e.media(:thumb) %>
               <% end %>
             </div>
@@ -263,3 +256,79 @@ function($) {
 </script>
 <!-- Dropzone js -->
 <%= javascript_include_tag 'dropzone/dist/dropzone', 'data-turbolinks-track' => true %>
+
+
+<script>
+  // This example adds a search box to a map, using the Google Place Autocomplete
+  // feature. People can enter geographical searches. The search box will return a
+  // pick list containing a mix of places and predicted search terms.
+
+  // This example requires the Places library. Include the libraries=places
+  // parameter when you first load the API. For example:
+  // <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places">
+
+  function initAutocomplete() {
+    var map = new google.maps.Map(document.getElementById('map'), {
+      center: {lat: -33.8688, lng: 151.2195},
+      zoom: 13,
+      mapTypeId: google.maps.MapTypeId.ROADMAP
+    });
+
+    // Create the search box and link it to the UI element.
+    var input = document.getElementById('pac-input');
+    var searchBox = new google.maps.places.SearchBox(input);
+    map.controls[google.maps.ControlPosition.TOP_LEFT].push(input);
+
+    // Bias the SearchBox results towards current map's viewport.
+    map.addListener('bounds_changed', function() {
+      searchBox.setBounds(map.getBounds());
+    });
+
+    var markers = [];
+    // Listen for the event fired when the user selects a prediction and retrieve
+    // more details for that place.
+    searchBox.addListener('places_changed', function() {
+      var places = searchBox.getPlaces();
+
+      if (places.length == 0) {
+        return;
+      }
+
+      // Clear out the old markers.
+      markers.forEach(function(marker) {
+        marker.setMap(null);
+      });
+      markers = [];
+
+      // For each place, get the icon, name and location.
+      var bounds = new google.maps.LatLngBounds();
+      places.forEach(function(place) {
+        var icon = {
+          url: place.icon,
+          size: new google.maps.Size(71, 71),
+          origin: new google.maps.Point(0, 0),
+          anchor: new google.maps.Point(17, 34),
+          scaledSize: new google.maps.Size(25, 25)
+        };
+
+        // Create a marker for each place.
+        markers.push(new google.maps.Marker({
+          map: map,
+          icon: icon,
+          title: place.name,
+          position: place.geometry.location
+        }));
+
+        if (place.geometry.viewport) {
+          // Only geocodes have viewport.
+          bounds.union(place.geometry.viewport);
+        } else {
+          bounds.extend(place.geometry.location);
+        }
+      });
+      map.fitBounds(bounds);
+    });
+  }
+
+</script>
+<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places&callback=initAutocomplete" async defer></script>
