--- a/app/views/admin/events/new.html.erb
+++ b/app/views/admin/events/new.html.erb
@@ -44,7 +44,7 @@
             </div>
 
             <div class="form-group section">
-              <div class="section-wrap clearfix">
+              <div class="section-wrap clearfix m-b-10">
                 <%= f.label :ticket, class: 'col-sm-3 control-label' %>
                 <div class="col-sm-2 ticket-name">
                   <%= f.text_field :ticket_name, multiple: true, class: 'form-control', placeholder: 'Ticket name', autofocus: true, required: true %>
@@ -62,8 +62,6 @@
                     </div>
                   </div>
                 </div>
-                <br>
-                <br>
               </div>
             </div>
 
@@ -105,50 +103,50 @@
                 height: 100%;
               }
 
-.controls {
-  margin-top: 10px;
-  border: 1px solid transparent;
-  border-radius: 2px 0 0 2px;
-  box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  height: 32px;
-  outline: none;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
-}
+              .controls {
+                margin-top: 10px;
+                border: 1px solid transparent;
+                border-radius: 2px 0 0 2px;
+                box-sizing: border-box;
+                -moz-box-sizing: border-box;
+                height: 32px;
+                outline: none;
+                box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+              }
 
-#pac-input {
-  background-color: #fff;
-  font-family: Roboto;
-  font-size: 15px;
-  font-weight: 300;
-  margin-left: 12px;
-  padding: 0 11px 0 13px;
-  text-overflow: ellipsis;
-  width: 300px;
-}
+              #pac-input {
+                background-color: #fff;
+                font-family: Roboto;
+                font-size: 15px;
+                font-weight: 300;
+                margin-left: 12px;
+                padding: 0 11px 0 13px;
+                text-overflow: ellipsis;
+                width: 300px;
+              }
 
-#pac-input:focus {
-  border-color: #4d90fe;
-}
+              #pac-input:focus {
+                border-color: #4d90fe;
+              }
 
-.pac-container {
-  font-family: Roboto;
-}
+              .pac-container {
+                font-family: Roboto;
+              }
 
-#type-selector {
-  color: #fff;
-  background-color: #4d90fe;
-  padding: 5px 11px 0px 11px;
-}
+              #type-selector {
+                color: #fff;
+                background-color: #4d90fe;
+                padding: 5px 11px 0px 11px;
+              }
 
-#type-selector label {
-  font-family: Roboto;
-  font-size: 13px;
-  font-weight: 300;
-}
-#target {
-  width: 345px;
-}
+              #type-selector label {
+                font-family: Roboto;
+                font-size: 13px;
+                font-weight: 300;
+              }
+              #target {
+                width: 345px;
+              }
             </style>
             <div class="row">
               <div class="col-sm-12">
