--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -9,7 +9,7 @@ body
   color: #5a5a5a
 
 .carousel
-  margin-bottom: 4rem
+  margin-bottom: 20px
 
 .carousel-caption
   z-index: 10
@@ -33,6 +33,10 @@ body
   margin-left: 0
   > li
     margin-bottom: .25rem
+
+.card-text
+  margin-left: 0 !important
+  margin-right: 0 !important
 
 .marketing
   .col-lg-4
