--- a/app/views/admin/events/new.html.erb
+++ b/app/views/admin/events/new.html.erb
@@ -1,81 +1,59 @@
 <div class="row">
   <div class="col-sm-12">
     <div class="card-box">
-      <h4 class="m-t-0 m-b-30 header-title"><b>Fields validation</b></h4>
+      <!-- <h4 class="m-t-0 m-b-30 header-title"><b>Fields validation</b></h4> -->
+
       <%= form_for @event, url: admin_events_path, medthod: :post, html: { class: 'form-horizontal group-border-dashed' } do |f| %>
-      <div class="row">
-        <div class="col-lg-12">
-          <h5><b>Validation type</b></h5>
-          <p class="text-muted font-13 m-b-30">
-            Your awesome text goes here.
-          </p>
-            <div class="form-group">
-              <%= f.label :organizer, class: 'col-sm-3 control-label' %>
-              <div class="col-sm-6">
-                <%= f.select :user, options_for_select(@users.collect{ |u| ["#{u.first_name} #{u.last_name}", u.id] }), {}, { class: 'form-control select2' } %>
-              </div>
-            </div>
+        <div class="row">
+          <div class="col-md-7">
+            <h4>Event Details</h4>
+<!--             <p class="text-muted font-13 m-b-30">
+              Your awesome text goes here.
+            </p> -->
 
             <div class="form-group">
-              <%= f.label :category, class: 'col-sm-3 control-label' %>
-              <div class="col-sm-6">
-                <%= f.select :category, options_for_select(@categories.collect{ |c| [c.name, c.id] }), {}, { class: 'form-control select2' } %>
-              </div>
-            </div>
-
-            <div class="form-group">
-              <%= f.label :title, class: 'col-sm-3 control-label' %>
+              <%= f.label :title, class: 'col-sm-2 control-label' %>
               <div class="col-sm-6">
                 <%= f.text_field :title, class: 'form-control', autofocus: true, required: true, placeholder: 'Type something'  %>
               </div>
             </div>
 
+<!--             <div class="form-group">
+              <%= f.label :organizer, class: 'col-sm-2 control-label' %>
+              <div class="col-sm-6">
+                <%= f.select :user, options_for_select(@users.collect{ |u| ["#{u.first_name} #{u.last_name}", u.id] }), {}, { class: 'form-control select2' } %>
+              </div>
+            </div>
+ -->
+
             <div class="form-group">
-              <%= f.label :description, class: 'col-sm-3 control-label' %>
+              <%= f.label :categories, class: 'col-sm-2 control-label' %>
+              <div class="col-sm-6">
+                <%= f.collection_check_boxes :category, @categories, :id, :name do |c| %>
+                  <div class="checkbox">
+                    <%= c.check_box %>
+                    <%= c.label %>
+                  </div>
+                <% end %>
+              </div>
+            </div>
+
+<!--             <div class="form-group">
+              <%= f.label :category, class: 'col-sm-2 control-label' %>
+              <div class="col-sm-6">
+                <%= f.select :category, options_for_select(@categories.collect{ |c| [c.name, c.id] }), {}, { class: 'form-control select2' } %>
+              </div>
+            </div> -->
+
+            <div class="form-group">
+              <%= f.label :description, class: 'col-sm-2 control-label' %>
               <div class="col-sm-6">
                 <%= f.text_area :description, class: 'form-control', rows: 3, required: true %>
               </div>
             </div>
 
-            <div class="row">
-              <div class="col-sm-offset-3 col-sm-6">
-                <a id="add-more-field" href="javascript:;" target="_self">Add more</a>
-              </div>
-            </div>
-
-            <div class="form-group section">
-              <div class="section-wrap clearfix m-b-10">
-                <%= f.label :ticket, class: 'col-sm-3 control-label' %>
-                <div class="col-sm-2 ticket-name">
-                  <%= f.text_field :ticket_name, multiple: true, class: 'form-control', placeholder: 'Ticket name', autofocus: true, required: true %>
-                </div>
-                <div class="col-sm-2 ticket-price">
-                  <%= f.text_field :ticket_price, multiple: true, class: 'form-control', placeholder: 'Ticket price', autofocus: true, required: true, "data-parsley-type": "number", "data-parsley-maxlength": "7" %>
-                </div>
-                <div class="col-sm-2 ticket-date">
-                  <%= f.text_field :ticket_date, multiple: true, class: 'form-control event-datepicker', autofocus: true, required: true, placeholder: "dd/mm/yyyy", "date-format": "dd/mm/yyyy" %>
-                </div>
-                <div class="col-sm-2 ticket-time">
-                  <div class="input-group">
-                    <div class="bootstrap-timepicker">
-                      <%= f.text_field :ticket_time, multiple: true, class: 'form-control event-timepicker', autofocus: true, required: true, placeholder: "9:00" %>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
             <div class="form-group">
-              <%= f.label :attachments, class: 'col-sm-3 control-label' %>
-              <div class="col-sm-6">
-                <div class="form-control">
-                  <%= f.file_field :attachments, type: :file, required: true, multiple: true %>
-                </div>
-              </div>
-            </div>
-
-            <div class="form-group">
-              <%= f.label :location, class: 'col-sm-3 control-label' %>
+              <%= f.label :location, class: 'col-sm-2 control-label' %>
               <div class="col-sm-6">
                 <%= f.text_field :location, class: 'form-control', autofocus: true, required: true, placeholder: 'ชื่อสถานที่, ถนน, ซอย'  %>
               </div>
@@ -90,7 +68,7 @@
               }*/
               #map {
                 width: 100%;
-                min-height: 500px;
+                min-height: 300px;
                 height: 100%;
               }
 
@@ -140,7 +118,7 @@
               }
             </style>
             <div class="row">
-              <div class="col-sm-12">
+              <div class="col-md-11">
                 <div class="card-box">
                   <h4 class="m-t-0 m-b-20 header-title"><b>Map</b></h4>
                   <!-- <div id="gmaps-overlay" class="gmaps"></div> -->
@@ -290,15 +268,40 @@
               }
             </script>
         </div>
+
+        <div class="col-md-5">
+          <div class="form-group">
+            <%= f.label :picture, class: 'col-sm-2 control-label' %>
+            <div class="col-sm-10">
+              <div class="form-control">
+                <%= f.file_field :attachments, type: :file, required: true, multiple: true %>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="row">
+        <div class="col-md-12">
+          <h4>2. Ticket Detail</h4>
+
+          <div id="ticket">
+            <%= f.fields_for :sections do |task| %>
+              <%= render 'section_fields', f: section %>
+            <% end %>
+            <div class="links">
+              <%= link_to_add_association 'add task', f, :sections %>
+            </div>
+          </div>
+
+        </div>
       </div>
 
       <div class="row">
-        <div class="col-lg-12 text-right">
+        <div class="col-lg-12">
           <button id="submitForm" type="submit" class="btn btn-primary waves-effect waves-light">
             Sumit
-          </button>
-          <button id="resetForm" type="reset" class="btn btn-default waves-effect waves-light m-l-5">
-            Cancel
           </button>
         </div>
       </div>
@@ -324,36 +327,62 @@
 <%= javascript_include_tag 'bootstrap-datepicker/dist/js/bootstrap-datepicker.min', 'data-turbolinks-track' => true %>
 <%= javascript_include_tag 'bootstrap-daterangepicker/daterangepicker', 'data-turbolinks-track' => true %>
 
-<script>
+<!-- Parsleyjs -->
+<%= javascript_include_tag 'components/parsley', 'data-turbolinks-track' => true %>
+
+<!-- Dropzone js -->
+<%#= javascript_include_tag 'dropzone/dist/dropzone', 'data-turbolinks-track' => true %>
+<!--
+<script type="text/javascript">
+  var uploader = new Dropzone('#event_attachments');
+  uploader.on('success', function( file, resp ){
+    console.log(file)
+  });
+</script> -->
+<script type="text/javascript">
 
   jQuery(document).ready(function() {
 
-    var max_fields      = 10; //maximum input boxes allowed
-    var wrapper         = $(".section-wrap"); //Fields wrapper
-    var add_button      = $("#add-more-field"); //Add button ID
-    var ticketName      = $(".ticket-name");
-    var ticketPrice     = $(".ticket-price");
-    var ticketDate      = $(".ticket-date");
-    var ticketTime      = $(".ticket-time");
+    // var max_fields      = 10; //maximum input boxes allowed
+    // var wrapper         = $(".section-wrap"); //Fields wrapper
+    // var add_button      = $("#add-more-field"); //Add button ID
+    // var sectionName      = $(".section-name");
+    // var sectionPrice     = $(".section-price");
+    // var sectionDate      = $(".section-date");
+    // var sectionTime      = $(".section-time");
 
-    var x = 1; //initlal text box count
-    $(add_button).click(function(e){ //on add input button click
-      e.preventDefault();
-      if(x < max_fields){ //max input box allowed
-        x++; //text box increment
-        // $(wrapper).append('<div><input type="text" name="mytext[]"/><a href="#" class="remove_field">Remove</a></div>'); //add input box
+    // var x = 1; //initlal text box count
+    // $(add_button).click(function(e){ //on add input button click
+    //   e.preventDefault();
+    //   if(x < max_fields){ //max input box allowed
+    //     x++; //text box increment
+    //     // $(wrapper).append('<div><input type="text" name="mytext[]"/><a href="#" class="remove_field">Remove</a></div>'); //add input box
 
-        $(wrapper).clone().appendTo($('.section:last'));
+    //     $(wrapper).clone().appendTo($('.section:last'));
 
+    //     picker_init();
+    //   }
+    // });
+
+    // $(wrapper).on("click",".remove_field", function(e){ //user click on remove text
+    //   e.preventDefault(); $(this).parent('div').remove(); x--;
+    // })
+
+    $('form').parsley();
+    picker_init();
+
+    // $('.remove_fields.dynamic, .remove_fields.existing').on('click', function(e) {
+    //   alert("xxx")
+    //   setTimeout(function(){
+    //     picker_init();
+    //   }, 3000);
+    // }
+    $('.add_fields').click(function(){
+      setTimeout(function(){
         picker_init();
-      }
+      }, 0);
     });
 
-    $(wrapper).on("click",".remove_field", function(e){ //user click on remove text
-      e.preventDefault(); $(this).parent('div').remove(); x--;
-    })
-
-    picker_init();
   });
 
   function picker_init(){
@@ -371,21 +400,3 @@
 
 </script>
 
-<!-- Parsleyjs -->
-<%#= javascript_include_tag 'parsleyjs/dist/parsley.min', 'data-turbolinks-track' => true %>
-<script type="text/javascript" src="//cdn.bootcss.com/parsley.js/2.4.3/parsley.min.js"></script>
-<script type="text/javascript">
-  $(document).ready(function() {
-    $('form').parsley();
-  });
-</script>
-
-<!-- Dropzone js -->
-<%#= javascript_include_tag 'dropzone/dist/dropzone', 'data-turbolinks-track' => true %>
-<!--
-<script type="text/javascript">
-  var uploader = new Dropzone('#event_attachments');
-  uploader.on('success', function( file, resp ){
-    console.log(file)
-  });
-</script> -->
