--- a/app/views/layouts/management.html.erb
+++ b/app/views/layouts/management.html.erb
@@ -7,7 +7,7 @@
     <meta name="description" content="A fully featured admin theme which can be used to build CRM, CMS, etc.">
     <meta name="author" content="Coderthemes">
 
-    <link rel="shortcut icon" href="images/favicon_1.ico">
+    <!-- <link rel="shortcut icon" href="images/favicon_1.ico"> -->
 
     <title>Daydash</title>
     <%= csrf_meta_tags %>
