--- a/app/views/admin/events/index.html.erb
+++ b/app/views/admin/events/index.html.erb
@@ -24,7 +24,7 @@
               <tr>
                 <td><%= link_to (image_tag event.galleries.first.try(:media, :thumb), width: '100'), edit_admin_event_path(event.id), target: '_self' %></td>
                 <td><%= link_to event.title, edit_admin_event_path(event.id), target: '_self' %></td>
-                <td><%= event.category.try(:name) %></td>
+                <td><%= event.category.try(:title) %></td>
                 <td><%= "#{event.user.try(:first_name)} #{event.user.try(:last_name)}" %></td>
                 <td><%= event.location %></td>
               </tr>
