fix remove media

--- a/app/views/admin/events/edit.html.erb
+++ b/app/views/admin/events/edit.html.erb
@@ -263,10 +263,10 @@
               <div class="form-control">
                 <%= f.file_field :attachments, type: :file, multiple: true %>
               </div>
-              <% @event.galleries.each do |x| %>
+              <% @event.galleries.each do |g| %>
               <div class="m-t-20">
-                <%= image_tag x.media(:thumb), width: '100%', height: :auto %>
-                <%= link_to('Delete', delete_attachment_admin_events_path(x.id), method: :delete) %>
+                <%= image_tag g.media(:thumb), width: '100%', height: :auto %>
+                <%= link_to('Delete', delete_attachment_admin_events_path(@event.id, g.id), method: :delete) %>
               </div>
               <% end %>
             </div>
