admin to management pages

--- a/app/assets/stylesheets/management.sass
+++ b/app/assets/stylesheets/management.sass
@@ -1,5 +1,12 @@
 /*
- *= require ./components/core
+
+ *= require bootstrap.min
+ *= require core
+ *= require components
+ *= require icons
+ *= require pages
+ *= require menu
+ *= require responsive
 
  *= require bootstrap-tagsinput/dist/bootstrap-tagsinput
  *= require multiselect/css/multi-select
@@ -13,7 +20,7 @@
 
  *= require dropzone/dist/dropzone
 
- *= require_tree ./components/admin
- *= require_tree ./admin
+ *= require_tree ./components
+ *= require_tree ./management
  *= require_self
  */
