--- a/app/assets/stylesheets/users.sass
+++ b/app/assets/stylesheets/users.sass
@@ -1,5 +1,5 @@
 /*
- *= require ./components/core
- *= require_tree ./admin
+ *= require_tree ./components
+ *= require_tree ./management
  *= require_self
  */
