--- a/app/views/layouts/management.html.erb
+++ b/app/views/layouts/management.html.erb
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A fully featured admin theme which can be used to build CRM, CMS, etc.">
+    <meta name="description" content="A fully featured management theme which can be used to build CRM, CMS, etc.">
     <meta name="author" content="Coderthemes">
 
     <!-- <link rel="shortcut icon" href="images/favicon_1.ico"> -->
@@ -12,27 +12,18 @@
     <title>Daydash</title>
     <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag 'bootstrap.min', media: 'all', 'data-turbolinks-track' => true %>
-    <%= stylesheet_link_tag 'core', media: 'all', 'data-turbolinks-track' => true %>
-    <%= stylesheet_link_tag 'components', media: 'all', 'data-turbolinks-track' => true %>
-    <%= stylesheet_link_tag 'icons', media: 'all', 'data-turbolinks-track' => true %>
-    <%= stylesheet_link_tag 'pages', media: 'all', 'data-turbolinks-track' => true %>
-    <%= stylesheet_link_tag 'menu', media: 'all', 'data-turbolinks-track' => true %>
-    <%= stylesheet_link_tag 'responsive', media: 'all', 'data-turbolinks-track' => true %>
-
     <!-- HTML5 Shiv and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
     <%= javascript_include_tag 'https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'https://oss.maxcdn.com/libs/respond.1.3.0/respond.min.js', 'data-turbolinks-track' => true %>
     <![endif]-->
-    <%= javascript_include_tag 'modernizr.min', 'data-turbolinks-track' => true %>
 
     <%= stylesheet_link_tag    'management', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag "management", "data-turbolinks-track" => true %>
   </head>
   <body>
-    <%= render partial: "admin/header" %>
+    <%= render partial: "management/header" %>
     <div class="wrapper">
         <div class="container">
             <div class="row">
@@ -51,7 +42,7 @@
                     <%= yield %>
                 </div>
             </div>
-            <%= render partial: "admin/footer" %>
+            <%= render partial: "management/footer" %>
         </div>
     </div>
     <!-- Custom main Js -->
