--- a/app/views/management/events/edit.html.erb
+++ b/app/views/management/events/edit.html.erb
@@ -323,7 +323,7 @@
 <%= javascript_include_tag 'bootstrap-daterangepicker/daterangepicker', 'data-turbolinks-track' => true %>
 
 <!-- Parsleyjs -->
-<%= javascript_include_tag 'components/parsley', 'data-turbolinks-track' => true %>
+<%= javascript_include_tag 'components/libs/parsley', 'data-turbolinks-track' => true %>
 
 <!-- Dropzone js -->
 <%#= javascript_include_tag 'dropzone/dist/dropzone', 'data-turbolinks-track' => true %>
@@ -369,4 +369,3 @@
   }
 
 </script>
-
