--- a/app/views/management/events/new.html.erb
+++ b/app/views/management/events/new.html.erb
@@ -310,7 +310,7 @@
 <%= javascript_include_tag 'bootstrap-daterangepicker/daterangepicker', 'data-turbolinks-track' => true %>
 
 <!-- Parsleyjs -->
-<%= javascript_include_tag 'components/parsley', 'data-turbolinks-track' => true %>
+<%= javascript_include_tag 'components/libs/parsley', 'data-turbolinks-track' => true %>
 
 <!-- Dropzone js -->
 <%#= javascript_include_tag 'dropzone/dist/dropzone', 'data-turbolinks-track' => true %>
@@ -357,4 +357,3 @@
   }
 
 </script>
-
