--- a/app/assets/stylesheets/client/core.sass
+++ b/app/assets/stylesheets/client/core.sass
@@ -7,6 +7,8 @@ body
   padding-bottom: 3rem
   color: #5a5a5a
 
+.m-b-60
+  margin-bottom: 60px
 .carousel
   margin-bottom: 20px
 
@@ -47,6 +49,14 @@ body
 .card-text
   margin-left: 0
   margin-right: 0
+  overflow: hidden
+  text-overflow: ellipsis
+  display: -webkit-box
+  line-height: 16px
+  max-height: 32px
+  -webkit-line-clamp: 2
+  -webkit-box-orient: vertical
+  height: 40px
 
 .marketing
   .col-lg-4
