--- a/app/assets/stylesheets/client/core.sass
+++ b/app/assets/stylesheets/client/core.sass
@@ -9,6 +9,7 @@ body
 
 .wrapper
   margin-top: 85px !important
+  margin-bottom: 150px !important
 
 .m-b-60
   margin-bottom: 60px
@@ -29,12 +30,12 @@ body
     height: 32rem
 
 .carousel-indicators
-  top: 1.5rem
-  right: 1.5rem
-  bottom: auto
-  left: auto
-  width: 1rem
-  margin-left: 0
+  // top: 1.5rem
+  // right: 1.5rem
+  // bottom: auto
+  // left: auto
+  // width: 1rem
+  // margin-left: 0
   > li
     margin-bottom: .25rem
 
