--- a/app/views/client/events/payment.html.erb
+++ b/app/views/client/events/payment.html.erb
@@ -39,17 +39,98 @@
       <!-- Nav tabs -->
       <ul class="nav nav-tabs" role="tablist">
         <li role="presentation" class="active text-center">
-          <a href="#credit-card" aria-controls="home" role="tab" data-toggle="tab">Credit Card</a>
+          <a href="#credit-card" aria-controls="credit-card" role="tab" data-toggle="tab">Credit Card</a>
         </li>
         <li role="presentation" class="text-center">
-          <a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Bank transfer</a>
+          <a href="#bank-transfer" aria-controls="bank-transfer" role="tab" data-toggle="tab">Bank transfer</a>
         </li>
       </ul>
 
       <!-- Tab panes -->
       <div class="tab-content">
-        <div role="tabpanel" class="tab-pane active" id="home">...</div>
-        <div role="tabpanel" class="tab-pane" id="profile">...xxxx</div>
+        <div role="tabpanel" class="tab-pane active" id="credit-card">
+
+
+          <%= form_tag client_event_checkout_path(@event.id), id: :checkout do  %>
+            <div id="token_errors"></div>
+
+            <input type="hidden" name="omise_token">
+
+            <div>
+              Name<br>
+              <input type="text" data-omise="holder_name">
+            </div>
+            <div>
+              Number<br>
+              <input type="text" data-omise="number">
+            </div>
+            <div>
+              Date<br>
+              <input type="text" data-omise="expiration_month" size="4"> /
+              <input type="text" data-omise="expiration_year" size="8">
+            </div>
+            <div>
+              Security Code<br>
+              <input type="text" data-omise="security_code" size="8">
+            </div>
+
+            <input type="submit" id="create_token">
+          <% end %>
+
+
+          <script src="https://cdn.omise.co/omise.js.gz"></script>
+          <script type="text/javascript">
+
+            Omise.setPublicKey("pkey_test_54rvq6seh8u6mkyxhuh");
+
+            $("#checkout").submit(function () {
+
+            var form = $(this);
+
+            // Disable the submit button to avoid repeated click.
+            form.find("input[type=submit]").prop("disabled", true);
+
+            // Serialize the form fields into a valid card object.
+            var card = {
+              "name": form.find("[data-omise=holder_name]").val(),
+              "number": form.find("[data-omise=number]").val(),
+              "expiration_month": form.find("[data-omise=expiration_month]").val(),
+              "expiration_year": form.find("[data-omise=expiration_year]").val(),
+              "security_code": form.find("[data-omise=security_code]").val()
+            };
+
+            // Send a request to create a token then trigger the callback function once
+            // a response is received from Omise.
+            //
+            // Note that the response could be an error and this needs to be handled within
+            // the callback.
+            Omise.createToken("card", card, function (statusCode, response) {
+              if (response.object == "error") {
+                // Display an error message.
+                $("#token_errors").html(response.message);
+
+                // Re-enable the submit button.
+                form.find("input[type=submit]").prop("disabled", false);
+              } else {
+                // Then fill the omise_token.
+                form.find("[name=omise_token]").val(response.id);
+
+                // Remove card number from form before submiting to server.
+                form.find("[data-omise=number]").val("");
+                form.find("[data-omise=security_code]").val("");
+
+                // submit token to server.
+                form.get(0).submit();
+              };
+            });
+
+            // Prevent the form from being submitted;
+            return false;
+
+          });
+          </script>
+        </div>
+        <div role="tabpanel" class="tab-pane" id="bank-transfer">...xxxx</div>
       </div>
 
     </div>
