--- a/app/views/layouts/parts/_nav.html.erb
+++ b/app/views/layouts/parts/_nav.html.erb
@@ -37,8 +37,8 @@
                 </li>
               </ul>
             <% else %>
-              <li><%= link_to "Sign Up", new_user_session_path %></li>
-              <li><%= link_to "Sign In", new_user_session_path %></li>
+              <li><%= link_to "Sign Up", '#' %></li>
+              <li><%= link_to "Sign In", '#', 'data-toggle': "modal", 'data-target': ".bs-example-modal-md" %></li>
             <% end %>
           </li>
         </ul>
@@ -84,3 +84,52 @@
     </div>
   <% end %>
 </header>
+
+<!-- Large modal -->
+<!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-lg">Large modal</button> -->
+
+<div class="modal fade bs-example-modal-md" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
+  <div class="modal-dialog modal-md">
+    <div class="modal-content">
+      <%= render "users/shared/social" %>
+
+      <%= form_for(resource, as: resource_name, url: session_path(resource_name), html: { class: 'form-horizontal m-t-20' }) do |f| %>
+        <div class="form-group">
+          <div class="col-xs-12">
+            <%= f.email_field :email, autofocus: true, class: 'form-control', placeholder: 'Your email address', required: true %>
+            <i class="md md-account-circle form-control-feedback l-h-34"></i>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-xs-12">
+            <%= f.password_field :password, autocomplete: 'off', class: 'form-control', placeholder: 'Your password', required: true %>
+            <i class="md md-vpn-key form-control-feedback l-h-34"></i>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-xs-12">
+            <div class="checkbox checkbox-primary">
+              <% if devise_mapping.rememberable? -%>
+                <%= f.check_box :remember_me, id: 'checkbox-signup' %>
+                <%= f.label :remember_me %>
+              <% end -%>
+            </div>
+          </div>
+        </div>
+        <div class="form-group text-right m-t-20">
+          <div class="col-xs-12">
+            <button class="btn btn-primary btn-custom w-md waves-effect waves-light" type="submit">Log In</button>
+          </div>
+        </div>
+        <div class="form-group m-t-30">
+          <div class="col-sm-7">
+              <%= render "users/shared/forgot_password" %>
+          </div>
+          <div class="col-sm-5 text-right">
+              <%= render "users/shared/signup" %>
+          </div>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
