--- a/app/views/layouts/parts/_carousel_index.html.erb
+++ b/app/views/layouts/parts/_carousel_index.html.erb
@@ -97,13 +97,13 @@
        </div>
        <div data-u="slides" style="cursor: default; position: relative; top: 0px; left: 0px; width: 1300px; height: 500px; overflow: hidden;">
            <div data-p="225.00" style="display: none;">
-               <img data-u="image" src="<%= @events.first.galleries.first.media(:full) %>" />
+               <img data-u="image" src="<%= @events.first.galleries.first.try(:media, :full) %>" />
            </div>
            <div data-p="225.00" style="display: none;">
-               <img data-u="image" src="<%= @events.second.galleries.first.media(:full) %>" />
+               <img data-u="image" src="<%= @events.second.galleries.first.try(:media, :full) %>" />
            </div>
            <div data-p="225.00" data-po="80% 55%" style="display: none;">
-               <img data-u="image" src="<%= @events.third.galleries.first.media(:full) %>" />
+               <img data-u="image" src="<%= @events.third.galleries.first.try(:media, :full) %>" />
            </div>
 
        </div>
